Вынес строку в strings.xml

--- a/app/src/main/res/menu/news_view_menu.xml
+++ b/app/src/main/res/menu/news_view_menu.xml
@@ -4,6 +4,6 @@
 
     <item
         android:icon="@drawable/ic_baseline_public_24"
-        android:title="Открыть"
+        android:title="@string/open"
         app:showAsAction="ifRoom" />
 </menu>
